smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace/unclosed-string2-invalid-single-quote.smithy
// Syntax error at line 3, column 6: Unexpected character: ''' | Model
namespace abc.def
@foo('
